--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "firebase": "^10.8.0",
     "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
